name:                advent
version:             0.0.0
synopsis:            Blah
description: Blah
homepage:            https://github.com/koterpillar/adventofcode2016
license:             MIT
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >3 && <5
                     , containers
                     , cryptonite
                     , split
                     , utf8-string
  hs-source-dirs:      .
